--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Projectname",
-  "version": "0.5.0",
+  "version": "2.0.0",
   "homepage": "http://www.ubiiqu.com/",
   "description": "",
   "keywords": [
@@ -10,9 +10,16 @@
     "name": "ubiiqu GmbH",
     "url": "http://www.ubiiqu.com/"
   },
+  "dependencies": {
+    "grunt": ">=0.3.9",
+    "grunt-css": ">=0.3.1",
+    "grunt-contrib-sass": ">=0.1.2",
+    "grunt-contrib-copy": ">=0.3.0",
+    "grunt-contrib-compress": ">=0.3.1",
+    "grunt-contrib-clean": ">=0.3.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/ubiiqu/.git"
-  },
-  "build": 94
+  }
 }
